Fixed problem with SVG image saving. Reduced draw.io iframe height to remove scrollbar.
git-svn-id: https://plugins.svn.wordpress.org/drawit/trunk@1200673 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/drawit.css
+++ b/css/drawit.css
@@ -22,7 +22,8 @@
 
 .drawit-editor-iframe {
     width: 100%;
-    height: calc(98% - (1em + 10px));
+    height: 94%;
+    height: calc(100% - 45px);
 }
 
 .drawit-editor-mask {
